More removal of plotting function

--- a/Kian_code/Controllers/PD.ipynb
+++ b/Kian_code/Controllers/PD.ipynb
@@ -467,143 +467,19 @@
     "\n",
     "\n",
     "\n",
-    "q = torch.tensor([[torch.pi/4, 0.0]])\n",
-    "q1_in = q[0,0]\n",
-    "q2_in = q[0,1]\n",
-    "\n",
-    "q_in_list = []\n",
-    "q_out_cw_list = []\n",
-    "q_out_ccw_list = []\n",
-    "\n",
-    "q_in_tensors = torch.empty((0,2))\n",
-    "\n",
-    "\n",
-    "\n",
-    "def theta_from_q(q1_in, q2_in):\n",
-    "\n",
-    "    theta1 = torch.sqrt((rp[\"xa\"] - rp[\"l1\"]*torch.cos(q1_in) - rp[\"l2\"]*torch.cos(q2_in))**2 + \n",
-    "                        (rp[\"ya\"] - rp[\"l1\"]*torch.sin(q1_in) - rp[\"l2\"]*torch.sin(q2_in))**2)\n",
-    "\n",
-    "    theta2 = torch.atan2((rp[\"ya\"] - rp[\"l1\"]*torch.sin(q1_in) - rp[\"l2\"]*torch.sin(q2_in)),\n",
-    "                        (rp[\"xa\"] - rp[\"l1\"]*torch.cos(q1_in) - rp[\"l2\"]*torch.cos(q2_in)))\n",
-    "    #print(\"theta1:\", theta1, \"   theta2:\", theta2)\n",
-    "    return(theta1, theta2)\n",
-    "\n",
-    "def q_from_theta(theta1, theta2):\n",
-    "    xend = rp[\"xa\"] - theta1*torch.cos(theta2)\n",
-    "    yend = rp[\"ya\"] - theta1*torch.sin(theta2)\n",
-    "\n",
-    "\n",
-    "    numerator = (xend**2 + yend**2 - rp[\"l1\"]**2 - rp[\"l2\"]**2)\n",
-    "    denominator = torch.tensor(2*rp[\"l1\"]*rp[\"l2\"])\n",
-    "\n",
-    "    beta = torch.arccos(numerator/(denominator+epsilon))\n",
-    "    q1 = torch.atan2(yend, xend + epsilon) - torch.atan2(rp[\"l2\"]*torch.sin(beta), epsilon + rp[\"l1\"] + rp[\"l2\"]*torch.cos(beta))\n",
-    "    q2 = q1 + beta\n",
-    "\n",
-    "    q1_alt = torch.atan2(yend, xend) + torch.atan2(rp[\"l2\"]*torch.sin(beta), rp[\"l1\"] + rp[\"l2\"]*torch.cos(beta))\n",
-    "    q2_alt = q1_alt - beta \n",
-    "\n",
-    "    return ((q1, q2), (q1_alt, q2_alt))\n",
-    "\n",
-    "def plot_coordinates(q_in_tensors, q_cw, q_ccw):\n",
-    "    \"\"\"\n",
-    "    Plots three lists of (x, y) coordinates in separate subplots, side by side, with the same limits.\n",
-    "\n",
-    "    Parameters:\n",
-    "    - q_in_list: List of (x, y) tuples to be plotted in the first subplot.\n",
-    "    - q_out_list: List of (x, y) tuples to be plotted in the second subplot.\n",
-    "    - q_alt_out_list: List of (x, y) tuples to be plotted in the third subplot.\n",
-    "    \"\"\"\n",
-    "    # Unpack each list into x and y coordinates\n",
-    "    #x_in, y_in = zip(*q_in_list) if q_in_list else ([], [])\n",
-    "    #x_out, y_out = zip(*q_out_list) if q_out_list else ([], [])\n",
-    "    #x_alt_out, y_alt_out = zip(*q_alt_out_list) if q_alt_out_list else ([], [])\n",
-    "\n",
-    "    x_in = q_in_tensors[:, 0].numpy()\n",
-    "    y_in = q_in_tensors[:, 1].numpy()\n",
-    "    x_out = q_cw[:, 0].numpy()\n",
-    "    y_out = q_cw[:, 1].numpy()\n",
-    "    x_alt_out = q_ccw[:, 0].numpy()\n",
-    "    y_alt_out = q_ccw[:, 1].numpy()\n",
-    "\n",
-    "    colors = cm.rainbow(np.linspace(0, 1, len(x_in)))\n",
-    "\n",
-    "    # Create subplots\n",
-    "    fig, axes = plt.subplots(1, 3, figsize=(15, 5), sharey=True)\n",
-    "\n",
-    "    # Define axis limits\n",
-    "    x_limits = (-1.1*np.pi, 1.1*np.pi)\n",
-    "    y_limits = (-1.1*np.pi, 1.1*np.pi)\n",
-    "\n",
-    "    # Plot q_in_list\n",
-    "    axes[0].scatter(x_in, y_in, color=colors, label='q_in_list', alpha=0.7)\n",
-    "    axes[0].set_xlim(x_limits)\n",
-    "    axes[0].set_ylim(y_limits)\n",
-    "    axes[0].set_title('q_in_list')\n",
-    "    axes[0].set_xlabel('q1')\n",
-    "    axes[0].set_ylabel('q2')\n",
-    "    axes[0].grid(True)\n",
-    "\n",
-    "    # Plot q_out_list\n",
-    "    axes[1].scatter(x_out, y_out, color=colors, label='q_out_list', alpha=0.7)\n",
-    "    axes[1].set_xlim(x_limits)\n",
-    "    axes[1].set_ylim(y_limits)\n",
-    "    axes[1].set_title('q_alt_out_list')\n",
-    "    axes[1].set_xlabel('X Coordinate')\n",
-    "    axes[1].grid(True)\n",
-    "\n",
-    "    # Plot q_alt_out_list\n",
-    "    axes[2].scatter(x_alt_out, y_alt_out, color=colors, label='q_alt_out_list', alpha=0.7)\n",
-    "    axes[2].set_xlim(x_limits)\n",
-    "    axes[2].set_ylim(y_limits)\n",
-    "    axes[2].set_title('q_alt_out_list')\n",
-    "    axes[2].set_xlabel('q1')\n",
-    "    axes[2].grid(True)\n",
-    "\n",
-    "    # Adjust layout\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
-    "\n",
-    "epsilon = 0.0001\n",
-    "\n",
-    "for j in range(0,1):\n",
-    "    for i in range(0,120):\n",
-    "        q1_in = torch.tensor(i*torch.pi/60 + j*torch.pi/40)\n",
-    "        q2_in = torch.tensor(j*torch.pi/5) - q1_in\n",
-    "        q_in_tensors = torch.cat((q_in_tensors, torch.tensor([[q1_in, q2_in]])), dim=0)\n",
-    "\n",
-    "th = torch.vmap(transforms.analytic_theta, in_dims=(None, 0))(rp, q_in_tensors)\n",
-    "q_cw, q_ccw = torch.vmap(transforms.analytic_inverse, in_dims=(None, 0))(rp, th)\n",
-    "\n",
-    "plot_coordinates(q_in_tensors, q_cw, q_ccw)\n",
+    "q_naive, q_d_naive, q_dd_naive = q_start, q_d_start, q_dd_start\n",
     "\n",
     "\n",
     "\n",
     "\n",
-    "#plot_coordinates(q_in_list, q_out_cw_list, q_out_ccw_list)\n",
     "\n",
     "\n",
     "\n",
-    "for q_in, q_out_cw, q_out_ccw in zip(q_in_tensors, q_cw, q_ccw):\n",
     "\n",
-    "    pos_end, pos_elbow = transforms.forward_kinematics(rp, q_in)\n",
+    "\n",
+    "\n",
     "    \n",
     "\n",
-    "    #plotter.plot_double_pendulum([pos_end], [pos_elbow])\n",
-    "\n",
-    "\n",
-    "pos_end_tensor, pos_elbow_tensor = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_in_tensors)\n",
-    "pos_end_tensor_cw, pos_elbow_tensor_cw = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_cw)\n",
-    "pos_end_tensor_ccw, pos_elbow_tensor_ccw = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_ccw)\n",
-    "colors = cm.rainbow(np.linspace(0, 1, pos_end_tensor.size(0)))\n",
-    "frames_input = plotter.frame_pendulum(pos_end_tensor, pos_elbow_tensor, colors = colors, height=5, width=5)\n",
-    "frames_cw = plotter.frame_pendulum(pos_end_tensor_cw, pos_elbow_tensor_cw, colors = colors, height=5, width=5)\n",
-    "frames_ccw = plotter.frame_pendulum(pos_end_tensor_ccw, pos_elbow_tensor_ccw, colors = colors, height=5, width=5)\n",
-    "\n",
-    "print(pos_end_tensor)\n",
-    "print(pos_elbow_tensor)\n",
-    "\n"
    ]
   },
   {
