Add simulation with a naive controller on q0, q1

--- a/Kian_code/Controllers/PD.ipynb
+++ b/Kian_code/Controllers/PD.ipynb
@@ -456,6 +456,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "Kp_naive = torch.tensor([[100., 0.], [0., 100.]]).to(device)\n",
+    "Kd_naive = torch.tensor([[40., 0.], [0., 40.]]).to(device)"
    ]
   },
   {
@@ -464,33 +466,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "q_naive_series, q_d_naive_series, q_dd_naive_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
     "\n",
     "\n",
+    "dt = 0.01\n",
+    "t_end = 15\n",
+    "t_series = torch.arange(0, 15, 0.01)\n",
     "\n",
     "q_naive, q_d_naive, q_dd_naive = q_start, q_d_start, q_dd_start\n",
     "\n",
+    "is_clockwise = transforms.check_clockwise(q_start.squeeze(0))\n",
     "\n",
+    "gravity = True\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
+    "for t in torch.arange(0, t_end, dt):\n",
+    "    print(\"Time:\", t.item().__round__(3))\n",
     "\n",
     "    \n",
+    "    q = q_naive\n",
+    "    q_d = q_d_naive\n",
     "\n",
+    "    M_q, C_q, G_q = dynamics.dynamical_matrices(rp, q.squeeze(0), q_d.squeeze(0))\n",
+    "    A_q = dynamics.input_matrix(rp, q.squeeze(0))\n",
+    "\n",
+    "\n",
+    "    u = torch.pinverse(A_q) @ ((Kp_naive @ (q_des - q).T + Kd_naive @ (q_d_des - q_d).T))     \n",
+    "    if gravity:\n",
+    "        u = u + torch.pinverse(A_q) @ G_q\n",
+    "    print(\"u:\", u)\n",
+    "\n",
+    "    tau_q = A_q * u\n",
+    "\n",
+    "    q_dd_naive = (torch.pinverse(M_q) @ (tau_q - C_q @ ((q_d).T) - G_q)).T \n",
+    "\n",
+    "    \n",
+    "    q_d_naive = q_d_naive + q_dd_naive * dt\n",
+    "    q_naive = q_naive + q_d_naive * dt\n",
+    "    q_naive = transforms.wrap_to_pi(q_naive)\n",
+    "\n",
+    "    \"\"\" Store data for plotting \"\"\"\n",
+    "  \n",
+    "    q_naive_series = torch.cat((q_naive_series, q_naive.detach()), dim=0)\n",
+    "    q_d_naive_series = torch.cat((q_d_naive_series, q_d_naive.detach()), dim=0)\n",
+    "    q_dd_naive_series = torch.cat((q_dd_naive_series, q_dd_naive.detach()), dim=0)\n",
+    "    \n",
+    "    \n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "1. Give setpoint in q-space\n",
-    "2. Give current position in q\n",
-    "3. Map both to theta\n",
-    "4. Calculate distance "
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
