--- a/Kian_code/Controllers/PD.ipynb
+++ b/Kian_code/Controllers/PD.ipynb
@@ -276,9 +276,11 @@
     "stride = 5\n",
     "pos_end_q_real, pos_elbow_q_real = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_real_series[::stride])\n",
     "pos_end_q_est, pos_elbow_q_est = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_est_series[::stride])\n",
+    "#pos_end_q_naive, pos_elbow_q_naive = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_naive_series[::stride])\n",
     "\n",
     "frames_q_real = plotter.frame_pendulum(pos_end_q_real, pos_elbow_q_real)\n",
     "frames_q_est = plotter.frame_pendulum(pos_end_q_est, pos_elbow_q_est)\n",
+    "#frames_q_naive = plotter.frame_pendulum(pos_end_q_naive, pos_elbow_q_naive)\n",
     "\n",
     "data_real = {\n",
     "    \"frames\": frames_q_real,\n",
@@ -294,6 +296,15 @@
     "    \"name\": \"q_est\",\n",
     "    \"arm_color\": \"tab:orange\", \n",
     "    \"act_color\": \"tab:red\"\n",
+    "} \n",
+    "\n",
+    "\"\"\"\n",
+    "data_naive = {\n",
+    "    \"frames\": frames_q_naive,\n",
+    "    \"times\": dt,\n",
+    "    \"name\": \"q_naive\",\n",
+    "    \"arm_color\": \"tab:green\", \n",
+    "    \"act_color\": \"tab:olive\"\n",
     "}\n",
     "\"\"\"\n",
     "\n",
@@ -309,13 +320,22 @@
     "    \"color\": \"tab:orange\"\n",
     "}\n",
     "\n",
-    "ref_poss = [ref_pos_real, ref_pos_est]\n",
+    "\"\"\"\n",
+    "ref_pos_naive = {\n",
+    "    \"pos\": xy_des_real,\n",
+    "    \"name\": \"naive\",\n",
+    "    \"color\": \"tab:green\"\n",
+    "}\n",
+    "\"\"\"\n",
     "\n",
-    "frames_data = [data_real, data_est]\n",
+    "ref_poss = [ref_pos_real]#, ref_pos_est]#, ref_pos_naive]\n",
+    "\n",
+    "#frames_data = [data_real, data_est]#, data_naive]\n",
     "#frames_data = [data_est]\n",
-    "#frames_data = [data_real]\n",
+    "frames_data = [data_real]\n",
     "\n",
-    "name_base = \"(\" + str(rp[\"xa\"]) + \",\" + str(rp[\"ya\"]) + \")_\"\n",
+    "name_rp = \"RP:(\" + str(rp[\"xa\"]) + \",\" + str(rp[\"ya\"]) + \")_\"\n",
+    "name_ref = \"ref:(\" + str(xy_des_real[0].item()) + \",\" + str(xy_des_real[1].item()) + \")_\"\n",
     "\n",
     "if neural_net:\n",
     "    model_type = \"NN\"\n",
@@ -326,13 +346,22 @@
     "file_name = \"damp\" + name_rp + name_ref + model_type\n",
     "if not gravity:\n",
     "    file_name = file_name + \"_no_G\"\n",
-    "file_name_gif = file_name + \".gif\"\n",
-    "file_name_mp4 = file_name + \".mp4\"\n",
+    "file_name = file_name + \"_0.mp4\"\n",
+    "file_counter = 0\n",
+    "\n",
+    "script_dir = os.getcwd()\n",
+    "output_path = os.path.join(script_dir, \"..\", \"Plotting\", \"Pendulum_plots\", file_name)\n",
+    "\n",
+    "while os.path.isfile(output_path):\n",
+    "    print(\"file name already exists\")\n",
+    "    file_counter += 1\n",
+    "    file_name = file_name[:-6] + \"_\" + str(file_counter) + \".mp4\"\n",
+    "    output_path = os.path.join(script_dir, \"..\", \"Plotting\", \"Pendulum_plots\", file_name)\n",
     "\n",
     "\n",
     "\n",
-    "plotter.animate_pendulum(frames_data, ref_poss=ref_poss, plot_actuator=True, file_name=file_name_mp4, fps = 1/(dt*stride), dt = dt*stride)\n",
-    "#plotter.animate_pendulum(frames_data, ref_pos=None, plot_actuator=False, file_name=file_name_mp4, fps = 1/(dt*stride), dt = dt*stride)\n"
+    "plotter.animate_pendulum(frames_data, ref_poss=ref_poss, plot_actuator=True, file_name=file_name, fps = 1/(dt*stride), dt = dt*stride)\n",
+    "#plotter.animate_pendulum(frames_data, ref_pos=None, plot_actuator=False, file_name=file_name, fps = 1/(dt*stride), dt = dt*stride)\n"
    ]
   },
   {
@@ -353,9 +382,9 @@
     "        \"color\": \"tab:blue\"\n",
     "    }#,\n",
     "    #{\n",
-    "    #    \"name\": \"naive_series\",\n",
-    "    #    \"values\": np.column_stack((np.sin(t_series + 1.0), np.cos(t_series + 1.0))),\n",
-    "    #    \"color\": \"red\"\n",
+    "    #    \"name\": \"naive\",\n",
+    "    #    \"values\": q_naive_series.cpu().detach().numpy(),\n",
+    "    #    \"color\": \"tab:green\"\n",
     "    #}\n",
     "]\n",
     "datasets_th = [\n",
@@ -371,9 +400,28 @@
     "    #}\n",
     "]\n",
     "\n",
+    "datasets_xy = [\n",
+    "    {\n",
+    "        \"name\": \"est\",\n",
+    "        \"values\": xy_est_series.cpu().detach().numpy(),\n",
+    "        \"color\": \"tab:orange\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"real\",\n",
+    "        \"values\": xy_real_series.cpu().detach().numpy(),\n",
+    "        \"color\": \"tab:blue\"\n",
+    "    }#,\n",
+    "    #{\n",
+    "    #    \"name\": \"naive\",\n",
+    "    #    \"values\": xy_naive_series.cpu().detach().numpy(),\n",
+    "    #    \"color\": \"tab:green\"\n",
+    "    #}\n",
+    "]\n",
+    "\n",
     "# Common labels for the plots.\n",
     "name_q = \"q trajectory\"\n",
     "name_th = \"th trajectory\"\n",
+    "name_xy = \"xy trajectory\"\n",
     "t_series = torch.arange(0, 15, 0.01)\n",
     "# Ensure the results directory exists.\n",
     "result_path = \"./results\"\n",
@@ -384,11 +432,13 @@
     "\n",
     "# Prepare plot datasets for each column.\n",
     "# Each call groups a set of datasets to be drawn in one subplot column.\n",
-    "column1 = ep.create_plot_dataset(datasets_q, t_series, name_q)\n",
-    "column2 = ep.create_plot_dataset(datasets_th, t_series, name_th)\n",
+    "column1 = ep.create_plot_dataset(t=t_series, datasets=datasets_q, reference=q_des, name=name_q)\n",
+    "column2 = ep.create_plot_dataset(t=t_series, datasets=datasets_th, reference=th_des, name=name_th)\n",
+    "column3 = ep.create_plot_dataset(t=t_series, datasets=datasets_xy, reference=xy_des_real.unsqueeze(0), name=name_xy)\n",
+    "plot_datasets = [column1, column2, column3]\n",
     "\n",
     "# Pass the list of columns (plot_dataset objects) to plot_multi.\n",
-    "ep.plot_multi([column1, column2], file_name=\"Trajectory_plots\", axes_names = [\"q\", \"th\"])"
+    "ep.plot_multi(plot_datasets=plot_datasets, file_name=\"Trajectory_plots\", axes_names = [\"q\", \"th\", \"xy\"])"
    ]
   },
   {
