--- a/Kian_code/Controllers/PD.ipynb
+++ b/Kian_code/Controllers/PD.ipynb
@@ -117,9 +117,7 @@
     "\n",
     "q_des_est = model.decoder(th_des, is_clockwise_des)\n",
     "q_d_des_est = (model.jacobian_dec(th_des, clockwise=is_clockwise_des) @ th_d_des.T).T\n",
-    "xy_des_est, _ = transforms.forward_kinematics(rp, q_des_est[0])\n",
-    "\n",
-    "print(xy_des_est)"
+    "xy_des_est, _ = transforms.forward_kinematics(rp, q_des_est[0])"
    ]
   },
   {
@@ -148,8 +146,6 @@
     "q_real, q_d_real, q_dd_real = q_start, q_d_start, q_dd_start\n",
     "\n",
     "is_clockwise = transforms.check_clockwise(q_start.squeeze(0))\n",
-    "\n",
-    "gravity = True\n",
     "\n",
     "\n",
     "if neural_net and fix_q:\n",
@@ -196,9 +192,7 @@
     "    A_th = transforms.transform_input_matrix_from_inverse_trans(A_q, J_h_inv_trans, device)\n",
     "\n",
     "    u = torch.pinverse(A_th) @ ((Kp @ (th_des - th).T + Kd @ (th_d_des - th_d).T))\n",
-    "    \n",
-    "    if gravity:\n",
-    "        u = u + torch.pinverse(A_th) @ G_th\n",
+    "    u = u + torch.pinverse(A_th) @ G_th\n",
     "\n",
     "    \"\"\" Update the real system and apply latent control input. \"\"\"\n",
     "\n",
@@ -207,10 +201,8 @@
     "\n",
     "    tau_q_real = A_q_real * u\n",
     "\n",
-    "    if gravity:\n",
-    "        q_dd_real = (torch.pinverse(M_q_real) @ (tau_q_real - C_q_real @ ((q_d_real).T) - G_q_real)).T \n",
-    "    else:\n",
-    "        q_dd_real = (torch.pinverse(M_q_real) @ (tau_q_real - C_q_real @ ((q_d_real).T))).T\n",
+    "    q_dd_real = (torch.pinverse(M_q_real) @ (tau_q_real - C_q_real @ ((q_d_real).T)- G_q_real)).T  #  - C_damp @ ((q_d_real).T) \n",
+    "\n",
     "    \n",
     "    q_d_real = q_d_real + q_dd_real * dt\n",
     "    q_real = q_real + q_d_real * dt\n",
@@ -344,8 +336,6 @@
     "\n",
     "\n",
     "file_name = \"damp\" + name_rp + name_ref + model_type\n",
-    "if not gravity:\n",
-    "    file_name = file_name + \"_no_G\"\n",
     "file_name = file_name + \"_0.mp4\"\n",
     "file_counter = 0\n",
     "\n",
@@ -527,8 +517,6 @@
     "\n",
     "is_clockwise = transforms.check_clockwise(q_start.squeeze(0))\n",
     "\n",
-    "gravity = True\n",
-    "\n",
     "for t in torch.arange(0, t_end, dt):\n",
     "    print(\"Time:\", t.item().__round__(3))\n",
     "\n",
@@ -541,8 +529,7 @@
     "\n",
     "\n",
     "    u = torch.pinverse(A_q) @ ((Kp_naive @ (q_des - q).T + Kd_naive @ (q_d_des - q_d).T))     \n",
-    "    if gravity:\n",
-    "        u = u + torch.pinverse(A_q) @ G_q\n",
+    "    u = u + torch.pinverse(A_q) @ G_q\n",
     "    print(\"u:\", u)\n",
     "\n",
     "    tau_q = A_q * u\n",
