Clean up imports

--- a/Kian_code/Learn Transform.ipynb
+++ b/Kian_code/Learn Transform.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
@@ -22,8 +23,13 @@
     "import Double_Pendulum.Lumped_Mass.transforms as transforms\n",
     "import Double_Pendulum.Lumped_Mass.dynamics as dynamics\n",
     "import Learning.loss_terms as loss_terms\n",
-    "import Plotting.plotters as plotters\n",
+    "#import Plotting.plotters_h1h2 as plotters_h1h2\n",
     "import Learning.training_data as training_data\n",
+    "import Plotting.theta_visualiser as theta_visualizer\n",
+    "\n",
+    "import Models.autoencoders as autoencoders\n",
+    "\n",
+    "from functools import partial\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -40,7 +46,6 @@
     "print(device)\n",
     "rp = robot_parameters.LUMPED_PARAMETERS\n",
     "print(rp)\n",
-    "import Plotting.theta_visualiser as theta_visualizer\n",
     "\n",
     "mapping_functions = (transforms.analytic_theta_1, transforms.analytic_theta_2)\n",
     "th_plotter = theta_visualizer.theta_plotter(rp=rp, n_lines=50, mapping_functions=mapping_functions)\n",
@@ -55,8 +60,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "\n",
     "# Retrieve training points\n",
     "points = training_data.points.to(device)\n",
