Define function to mask points on range

--- a/Kian_code/Learn Transform.ipynb
+++ b/Kian_code/Learn Transform.ipynb
@@ -60,31 +60,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def mask_points(q1_split, clockwise = False):\n",
     "\n",
-    "# Retrieve training points\n",
-    "points = training_data.points.to(device)\n",
+    "    \"\"\"\n",
+    "    Returns a set of [q1, q2] points based on \"q1_split\" limits on q1 and q2.\n",
+    "    The limits on q2 depend on whether a clockwise or counterclockwise dataset is selected.\n",
+    "    \"\"\"   \n",
     "\n",
-    "# Plot q1 vs q2\n",
-    "plt.figure(figsize=(8, 6))\n",
-    "plt.scatter(points[:, 0].cpu().numpy(), points[:, 1].cpu().numpy(), alpha=0.6, edgecolors='k', s=20)\n",
-    "plt.title('Scatter Plot of q1 vs q2')\n",
-    "plt.xlabel('q1')\n",
-    "plt.ylabel('q2')\n",
-    "plt.grid(True)\n",
-    "plt.show()\n",
+    "    # Retrieve training points\n",
+    "    points = training_data.points.to(device)\n",
+    "    \n",
+    "    # Mask to retrieve only the counterclockwise points\n",
+    "    width_mask = (points[:,0] >= q1_split[0]) & (points[:,0] <= q1_split[1])\n",
+    "    ccw_mask = ((points[:,1] >= points[:,0]) & \n",
+    "                  (points[:,1] <= points[:,0] + torch.pi)) #| ((points[:,1] >= points[:,0] - 2*torch.pi) &\n",
+    "                  #(points[:,1] <= points[:,0] - torch.pi))\n",
+    "    \n",
+    "    # Mask to retrieve only the clockwise points\n",
+    "    cw_mask = ((points[:,1] >= points[:,0] - torch.pi) & (points[:,1] <= points[:,0]))\n",
     "\n",
+    "    if clockwise:\n",
+    "        final_mask = width_mask & cw_mask\n",
+    "    else:\n",
+    "        final_mask = width_mask & ccw_mask\n",
+    "    \n",
+    "    points = points[final_mask]\n",
+    "    points = points[0:3000]\n",
     "\n",
-    "valid_mask = ((points[:,1] >= points[:,0] + torch.pi * 1/10) & (points[:,1] <= points[:,0] + torch.pi * 9/10))\n",
-    "points = points[valid_mask]\n",
-    "points = points[0:3000]\n",
+    "    if points.size(0) < 3000:\n",
+    "        print(\"Warning: Only\", points.size(0), \"points in dataset.\")\n",
     "\n",
-    "plt.figure(figsize=(8, 6))\n",
-    "plt.scatter(points[:, 0].cpu().numpy(), points[:, 1].cpu().numpy(), alpha=0.6, edgecolors='k', s=20)\n",
-    "plt.title('Scatter Plot of q1 vs q2')\n",
-    "plt.xlabel('q1')\n",
-    "plt.ylabel('q2')\n",
-    "plt.grid(True)\n",
-    "plt.show()"
+    "    return(points)"
    ]
   },
   {
