Define points plotter

--- a/Kian_code/Learn Transform.ipynb
+++ b/Kian_code/Learn Transform.ipynb
@@ -100,22 +100,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Compute mass- and input matrix of all training points to reduce load in training\n",
+    "def points_plotter(points, extend = None):\n",
     "\n",
-    "data_pairs = []\n",
-    "for point in points:\n",
-    "    Mq_point, _, _ = dynamics.dynamical_matrices(rp, point, point)\n",
-    "    Aq_point = dynamics.input_matrix(rp, point)\n",
-    "    data_pairs.append((point, Mq_point, Aq_point))\n",
-    "\n",
-    "\n",
-    "points_tensor = torch.stack([pair[0] for pair in data_pairs])           # Tensor of all points\n",
-    "mass_matrices_tensor = torch.stack([pair[1] for pair in data_pairs])   # Tensor of all mass matrices\n",
-    "input_matrices_tensor = torch.stack([pair[2] for pair in data_pairs])  # Tensor of all input matrices\n",
-    "\n",
-    "# Create TensorDataset\n",
-    "dataset = TensorDataset(points_tensor, mass_matrices_tensor, input_matrices_tensor)\n",
-    "print(len(dataset))"
+    "   \"\"\" \n",
+    "   Simple plotter function which visualizes the points used for training of the Autoencoder. \n",
+    "   \"\"\"\n",
+    "    \n",
+    "   plt.figure(figsize=(4, 4))\n",
+    "   plt.scatter(points[:, 0].cpu().numpy(), points[:, 1].cpu().numpy(), alpha=0.6, edgecolors='k', s=20)\n",
+    "   plt.title('Scatter Plot of q1 vs q2')\n",
+    "   plt.xlabel('q1')\n",
+    "   plt.ylabel('q2')\n",
+    "   plt.xlim(-2*torch.pi, 2*torch.pi)\n",
+    "   plt.ylim(-2*torch.pi, 2*torch.pi)\n",
+    "   plt.grid(True)\n",
+    "   plt.show()"
    ]
   },
   {
