Create and plot masked and deshifted points

--- a/Kian_code/Learn Transform.ipynb
+++ b/Kian_code/Learn Transform.ipynb
@@ -124,27 +124,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Split into training and test sets (80% train, 20% test)\n",
-    "\n",
-    "batch_size = 512\n",
-    "train_part = 0.7\n",
-    "\n",
-    "train_size = int(train_part * len(points))\n",
-    "val_size = len(points) - train_size\n",
-    "\n",
-    "\n",
-    "# Create TensorDataset for both training and testing sets\n",
-    "train_dataset, val_dataset = torch.utils.data.random_split(dataset, [train_size, val_size])\n",
-    "\n",
-    "# Create the DataLoader for both training and testing sets\n",
-    "train_dataloader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True, num_workers=0)\n",
-    "val_dataloader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False, num_workers=0)\n",
-    "\n",
-    "\n",
-    "##Iterate through the DataLoader\n",
-    "#for batch in train_dataloader:\n",
-    "    #print(batch[0])\n",
-    "    #break  # Just to show one batch"
+    "masked_points = mask_points((-torch.pi, torch.pi), clockwise = False)\n",
+    "deshifted_points = transforms.wrap_to_pi(masked_points.clone())\n",
+    "points_plotter(masked_points, extend=\"ccw\")\n",
+    "points_plotter(deshifted_points, extend=\"ccw\")"
    ]
   },
   {
