--- a/Kian_code/Learn Transform.ipynb
+++ b/Kian_code/Learn Transform.ipynb
@@ -166,49 +166,63 @@
    "source": [
     "import torch.nn.functional as F\n",
     "\n",
-    "def loss_fun(q, q_hat, m_matrix, input_matrix, J_h, J_h_dec):\n",
-    "    l_recon = F.mse_loss(q, q_hat, reduction=\"sum\")\n",
-    "    J_h_inv = J_h_dec\n",
+    "def loss_fun(q, theta, q_hat, M_q, A_q, J_h_enc, J_h_dec):\n",
+    "\n",
+    "    \"\"\"\n",
+    "    Loss function for training the Autoencoder. Loss terms are the following:\n",
+    "    l_recon:    Loss between input- and reconstructed variable. (MSE)\n",
+    "    l_off_dia:  Loss of off-diagonal terms of mass matrix in theta-space. (MSE)\n",
+    "    l_dia:      Loss on diagonal terms of mass matrix in theta-space. \n",
+    "                (mean of normalized negative log-loss)\n",
+    "    l_input:    Loss to drive input matrix in theta-space to [1, 0]^T (MSE)\n",
+    "\n",
+    "    \"\"\"\n",
+    "\n",
+    "    l_recon = F.mse_loss(q, q_hat, reduction=\"mean\")\n",
+    "\n",
+    "    # Calculate forward and inverse Jacobians\n",
+    "    J_h = J_h_enc\n",
     "    J_h_trans = torch.transpose(J_h, 1, 2)\n",
+    "    J_h_inv = J_h_dec\n",
     "    J_h_inv_trans = torch.transpose(J_h_inv, 1, 2)\n",
     "\n",
-    "    J_ortho = J_h @ J_h_trans\n",
-    "    J_ortho_inv = J_h_inv @ J_h_inv_trans\n",
-    "    \n",
-    "    #identity_matrix = J_h @ J_h_inv  # Batch-wise multiplication\n",
-    "    #unitary_target = torch.eye(identity_matrix.size(-1), device=identity_matrix.device).expand(identity_matrix.size(0), -1, -1)\n",
+    "    M_th = J_h_inv_trans @ M_q @ J_h_inv\n",
+    "    A_th = J_h_inv_trans @ A_q\n",
+    "\n",
+    "    # Loss inspired by Pietro Pustina's paper on input decoupling:\n",
+    "    # https://arxiv.org/pdf/2306.07258\n",
+    "    l_input_jac = F.mse_loss(J_h[:, 0, :], A_q[:, :, 0], reduction=\"mean\")\n",
     "\n",
     "\n",
-    "    # Enforce that decoder Jacobian is the inverse of the encoder Jacobian\n",
-    "    ## USE ONLY WHEN J_h_inv == J_h_dec\n",
-    "    #l_J_inv = torch.sum((torch.eye(identity_matrix.size(-1), device=identity_matrix.device) - identity_matrix)**2)  # Frobenius norm\n",
-    "    #l_J_ortho_inv = torch.sum((torch.eye(identity_matrix.size(-1), device=identity_matrix.device) - J_ortho_inv)**2)  # Frobenius norm\\n\",\n",
     "\n",
-    "    # Enforce that the Jacobian is orthogonal\n",
-    "    l_J_ortho = torch.sum((torch.eye(J_ortho.size(-1), device=J_ortho.device) - J_ortho)**2)  # Frobenius norm\n",
+    "    # Loss on the first coordinate theta, again from Pietro Pustina's analytic formulation\n",
+    "    theta_ana = torch.vmap(transforms.analytic_theta, in_dims = (None, 0))(rp, q)\n",
+    "    l_theta = F.mse_loss(theta[:, 0], theta_ana[:, 0], reduction=\"mean\")\n",
     "\n",
-    "    diag_matrix = J_h_inv_trans @ m_matrix @ J_h_inv  # Batch-wise diagonalization\n",
-    "\n",
-    "    ## Enforce inertial decoupling (diagonal loss)\n",
-    "    #off_dia = diag_matrix[:, 0, 1] \n",
-    "    #trace = torch.einsum('bii->b', diag_matrix)\n",
-    "    #M_th_ratio = (off_dia/trace)\n",
-    "    #l_diag = nn.MSELoss()(M_th_ratio, torch.zeros((M_th_ratio.size())).to(device))\n",
-    "\n",
-    "    \n",
     "    # Enforce inertial decoupling\n",
-    "    ## Slight concern is that this sends all values of M_th to 0. Hopefully l_J_ortho avoids this\n",
-    "    # NOTE: This is a very inefficient way of just taking the off diagonal value, squaring it and doubling it\n",
-    "    dia_mask = torch.eye(2).unsqueeze(0).repeat(diag_matrix.size(0), 1, 1)\n",
-    "    l_diag = torch.sum((diag_matrix - diag_matrix * dia_mask)**2)  # Penalize off-diagonal terms\n",
+    "    l_off_diag = torch.mean((M_th[:, 0, 1])**2)\n",
+    "    diag_values = torch.diagonal(M_th, dim1=1, dim2=2)\n",
+    "    l_diag = torch.mean((-1 + torch.exp(-(diag_values - 1))) * (diag_values < 1).float())  # Shape: (batch_size, 2)\n",
     "\n",
     "    ## input decoupling loss\n",
-    "    input_x = J_h_inv_trans @ input_matrix\n",
-    "    l_input = torch.sum((input_x[:, 1]**2)) #+ torch.sum(((input_x[:, 0]-1)**2))\n",
-    "    loss = l_recon + l_diag + l_input + l_J_ortho #+ l_J_inv + l_J_ortho_inv\n",
-    "    loss_terms = torch.tensor([l_recon, l_J_ortho, l_diag, l_input])\n",
+    "    #l_input = torch.mean((A_th[:, 1]**2)) + torch.sum(((A_th[:, 0]-1)**2))\n",
+    "    l_input = torch.mean((A_th[:, 1]**2))\n",
     "\n",
-    "    return loss, loss_terms"
+    "    f_recon        = 10.\n",
+    "    f_diag         = 1.\n",
+    "    f_off_diag     = 1.\n",
+    "    f_input        = 1.\n",
+    "    f_input_jac    = 1.\n",
+    "    f_theta        = 1.\n",
+    "\n",
+    "    \n",
+    "    loss_terms = torch.tensor([l_recon * f_recon, l_diag * f_diag, l_off_diag * f_off_diag, \n",
+    "                               l_input * f_input, l_input_jac * f_input_jac, l_theta * f_theta])\n",
+    "    loss_sum = l_recon * f_recon + l_diag * f_diag + l_off_diag * f_off_diag + l_input * f_input + l_input_jac * f_input_jac + l_theta * f_theta\n",
+    "\n",
+    "    lamda = 200\n",
+    "\n",
+    "    return lamda * loss_sum, lamda * loss_terms"
    ]
   },
   {
