Define function to make q, M_q, A_q datasets

--- a/Kian_code/Learn Transform.ipynb
+++ b/Kian_code/Learn Transform.ipynb
@@ -139,9 +139,26 @@
    "source": [
     "\n",
     "\n",
+    "def make_dataset(points):\n",
     "\n",
+    "    \"\"\"\n",
+    "    Compute mass- and input matrix of all training points to reduce load in training.\n",
+    "    Returns TensorDataset of (q, M_q, A_q). \n",
+    "    \"\"\"\n",
     "\n",
+    "    data_pairs = []\n",
+    "    for point in points:\n",
+    "        Mq_point, _, _ = dynamics.dynamical_matrices(rp, point, point)\n",
+    "        Aq_point = dynamics.input_matrix(rp, point)\n",
+    "        data_pairs.append((point, Mq_point, Aq_point))\n",
     "\n",
+    "    points_tensor = torch.stack([pair[0] for pair in data_pairs])           # Tensor of all points\n",
+    "    mass_matrices_tensor = torch.stack([pair[1] for pair in data_pairs])   # Tensor of all mass matrices\n",
+    "    input_matrices_tensor = torch.stack([pair[2] for pair in data_pairs])  # Tensor of all input matrices\n",
+    "\n",
+    "    # Create TensorDataset\n",
+    "    dataset = TensorDataset(points_tensor, mass_matrices_tensor, input_matrices_tensor)\n",
+    "    return(dataset)\n"
    ]
   },
   {
