Define function that makes dataloader object

--- a/Kian_code/Learn Transform.ipynb
+++ b/Kian_code/Learn Transform.ipynb
@@ -168,10 +168,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def make_dataloaders(dataset, batch_size = 512, train_part = 0.7):\n",
     "\n",
+    "    \"\"\"\n",
+    "    Creates a training and validation dataloader from an input dataset, based on \n",
+    "    batch size and the ratio train_part. \n",
+    "    \"\"\"\n",
     "\n",
+    "    train_size = int(train_part * len(dataset))\n",
+    "    val_size = len(dataset) - train_size\n",
     "\n",
+    "    # Create TensorDataset for both training and testing sets\n",
+    "    train_dataset, val_dataset = torch.utils.data.random_split(dataset, [train_size, val_size])\n",
     "\n",
+    "    # Create the DataLoader for both training and testing sets\n",
+    "    train_dataloader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True, num_workers=0)\n",
+    "    val_dataloader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False, num_workers=0)\n",
+    "\n",
+    "    return(train_dataloader, val_dataloader)"
    ]
   },
   {
