Functionalise AE training loop

--- a/Kian_code/Learn Transform.ipynb
+++ b/Kian_code/Learn Transform.ipynb
@@ -263,96 +263,96 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.ion()\n",
     "\n",
-    "train_losses = []\n",
-    "val_losses = []\n",
-    "start_time = time.time()\n",
-    "\n",
-    "model = Autoencoder(rp).to(device)  # Move model to GPU\n",
     "#model.load_state_dict(torch.load(load_path, weights_only=True))\n",
     "\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=1e-2, weight_decay=1e-6)\n",
-    "scheduler = torch.optim.lr_scheduler.ExponentialLR(optimizer, gamma=0.5 ** (1 / num_epochs))\n",
+    "\n",
+    "def train_AE_model(rp, device, lr, num_epochs, q1_split, train_dataloader, val_dataloader, current_time):\n",
+    "\n",
+    "    \"\"\"\n",
+    "    Executes training loop for Autoencoder\n",
+    "    \"\"\"\n",
+    "   \n",
+    "    model = autoencoders.Autoencoder_double(rp).to(device)  # Move model to GPU\n",
+    "    optimizer = torch.optim.Adam(model.parameters(), lr=lr)#,  weight_decay=1e-6)\n",
+    "    scheduler = torch.optim.lr_scheduler.ExponentialLR(optimizer, gamma=0.5 ** (1 / num_epochs))\n",
     "\n",
     "\n",
-    "for epoch in range(num_epochs):\n",
+    "    train_losses = []\n",
+    "    val_losses = []\n",
+    "    start_time = time.time()\n",
+    "    save_directory = os.path.join(os.getcwd(), \"Models/Split_AEs\")\n",
+    "    os.makedirs(save_directory, exist_ok=True)\n",
+    "    file_name = f\"Lumped_Mass_{current_time}.pth\"\n",
+    "    file_path = os.path.join(save_directory, file_name)\n",
     "\n",
-    "    # Training phase\n",
-    "    model.train()\n",
-    "    train_loss = 0\n",
-    "    train_loss_terms = torch.zeros(4)\n",
+    "    JSON = {\"q1_low\" : q1_split[0],\n",
+    "            \"q1_high\" : q1_split[1],\n",
+    "            \"lr\" : lr,\n",
+    "            \"epochs\" : num_epochs,\n",
+    "            \"file_name\" : file_name}\n",
     "\n",
-    "    for index, (q, M_q, A_q) in enumerate(train_dataloader):\n",
-    "        #batch_size = batch[0].shape[0]\n",
-    "        q = q.to(device)\n",
-    "        #q.requires_grad = True\n",
-    "        #q_d = batch[0].to(device)\n",
+    "    for epoch in range(num_epochs):\n",
     "\n",
-    "        M_q = M_q.to(device)\n",
-    "        A_q = A_q.to(device)\n",
-    "        \n",
-    "        theta, J_h, q_hat, J_h_dec, J_h_ana = model(q)  \n",
-    "        theta_ana = model.theta_ana(q)\n",
-    "                \n",
-    "        loss, loss_terms = loss_fun(q, q_hat, M_q, A_q, J_h, J_h_dec)\n",
-    "        #loss, loss_terms = loss_cheat(theta, theta_ana, J_h, J_h_ana, q, q_hat, J_h_dec)\n",
+    "        # Training phase\n",
+    "        model.train()\n",
+    "        train_loss = 0\n",
+    "        train_loss_terms = torch.zeros(6)\n",
+    "        for index, (q, M_q, A_q) in enumerate(train_dataloader):\n",
+    "            q = q.to(device)\n",
     "\n",
-    "        optimizer.zero_grad()\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "        \n",
-    "        train_loss += loss.item()\n",
-    "        train_loss_terms += loss_terms\n",
-    "    train_loss /= len(train_dataloader.dataset)\n",
-    "    train_loss_terms /= len(train_dataloader.dataset)\n",
-    "    train_losses.append(train_loss)\n",
+    "            M_q = M_q.to(device)\n",
+    "            A_q = A_q.to(device)\n",
+    "            \n",
+    "            theta, J_h, q_hat, J_h_dec, J_h_ana = model(q)  \n",
+    "            theta_ana = model.theta_ana(q)\n",
+    "                    \n",
+    "            loss, loss_terms = loss_fun(q, theta, q_hat, M_q, A_q, J_h, J_h_dec)\n",
     "\n",
-    "    # Validation phase\n",
-    "    model.eval()\n",
-    "    val_loss = 0\n",
-    "    val_loss_terms = torch.zeros(4)\n",
-    "    with torch.no_grad():\n",
-    "      for index, (q, M_q, A_q) in enumerate(val_dataloader):\n",
-    "        q = q.to(device)\n",
-    "        M_q = M_q.to(device)\n",
-    "        A_q = A_q.to(device)\n",
+    "            optimizer.zero_grad()\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            \n",
+    "            train_loss += loss.item()\n",
+    "            train_loss_terms += loss_terms\n",
+    "        train_loss /= len(train_dataloader.dataset)\n",
+    "        train_loss_terms /= len(train_dataloader.dataset)\n",
+    "        train_losses.append(train_loss)\n",
     "\n",
-    "        theta, J_h, q_hat, J_h_dec, J_h_ana = model(q)\n",
-    "        theta_ana = model.theta_ana(q)\n",
+    "        # Validation phase\n",
+    "        model.eval()\n",
+    "        val_loss = 0\n",
+    "        val_loss_terms = torch.zeros(6)\n",
+    "        with torch.no_grad():\n",
+    "            for index, (q, M_q, A_q) in enumerate(val_dataloader):\n",
+    "                q = q.to(device)\n",
+    "                M_q = M_q.to(device)\n",
+    "                A_q = A_q.to(device)\n",
     "\n",
-    "        loss, loss_terms = loss_fun(q, q_hat, M_q, A_q, J_h, J_h_dec)\n",
-    "        #loss, loss_terms = loss_cheat(theta, theta_ana, J_h, J_h_ana, q, q_hat, J_h_dec)\n",
+    "                theta, J_h, q_hat, J_h_dec, J_h_ana = model(q)\n",
+    "                theta_ana = model.theta_ana(q)\n",
     "\n",
-    "        J_h_inv = torch.linalg.inv(J_h)\n",
-    "        J_h_inv_trans = torch.transpose(J_h_inv, 1, 2)\n",
-    "        M_th = J_h_inv_trans @ M_q @ J_h_inv \n",
+    "                loss, loss_terms = loss_fun(q, theta, q_hat, M_q, A_q, J_h, J_h_dec)\n",
     "\n",
-    "        val_loss += loss.item()\n",
-    "        val_loss_terms += loss_terms\n",
-    "    val_loss /= len(val_dataloader.dataset)\n",
-    "    val_loss_terms /= len(val_dataloader.dataset)\n",
-    "    val_losses.append(val_loss)\n",
+    "                J_h_inv = torch.linalg.inv(J_h)\n",
+    "                J_h_inv_trans = torch.transpose(J_h_inv, 1, 2)\n",
+    "                M_th = J_h_inv_trans @ M_q @ J_h_inv \n",
     "\n",
-    "    epoch_duration = time.time() - start_time\n",
-    "    scheduler.step()\n",
-    "\n",
-    "\n",
-    "    if epoch % 10 == 0:\n",
+    "                val_loss += loss.item()\n",
+    "                val_loss_terms += loss_terms\n",
+    "        val_loss /= len(val_dataloader.dataset)\n",
+    "        val_loss_terms /= len(val_dataloader.dataset)\n",
+    "        val_losses.append(val_loss)\n",
+    "        epoch_duration = time.time() - start_time\n",
+    "        scheduler.step()\n",
+    "        tlt = train_loss_terms\n",
     "        print(\n",
-    "            f'Epoch [{epoch + 1}/{num_epochs}], Training Loss: {train_loss:.4f}, Validation Loss: {val_loss:.4f}, Duration: {epoch_duration:.2f} seconds'\n",
-    "            )\n",
-    "\n",
+    "            f'Epoch [{epoch + 1}/{num_epochs}], Training Loss: {train_loss:.4f}, Validation Loss: {val_loss:.4f}, Duration: {epoch_duration:.2f} seconds')\n",
     "        print(\n",
-    "            f\"recon: {val_loss_terms[0].item():.4f}, \"\n",
-    "            f\"J_ortho: {val_loss_terms[1].item():.4f}, \"\n",
-    "            f\"diag: {val_loss_terms[2].item():.4f}, \"\n",
-    "            f\"input: {val_loss_terms[3].item():.4f}\"\n",
+    "            f'l_recon: {tlt[0]:.4f}, l_diag: {tlt[1]:.4f}, l_off_diag: {tlt[2]:.4f}, l_input: {tlt[3]:.4f}, l_input_jac: {tlt[4]:.4f}, l_theta: {tlt[5]:.4f}'\n",
     "        )\n",
-    "        print(M_th[0])\n",
-    "\n",
-    "#torch.save(model.state_dict(), file_path)\n",
-    "#print(f\"Model parameters saved to {file_path}\")"
+    "            \n",
+    "    return(model, train_losses, val_losses, file_path)\n"
    ]
   },
   {
