--- a/Kian_code/Learn Transform.ipynb
+++ b/Kian_code/Learn Transform.ipynb
@@ -361,34 +361,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mapping_functions = (model.theta_1_single, model.theta_2_single)\n",
-    "th_plotter = theta_visualizer.theta_plotter(rp=rp, n_lines=50, mapping_functions=mapping_functions)\n",
-    "th_plotter.make_figure(\"theta_learned_5_2_image.png\")\n",
-    "th_plotter.make_animation(\"theta_learned_5_2.mp4\", duration = 4, fps = 20, stride = 1)"
+    "def save_model(model, file_path):\n",
+    "    torch.save(model.state_dict(), file_path)\n",
+    "    print(f\"Model parameters saved to {file_path}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "485b2aea",
+   "execution_count": null,
+   "id": "3c14e660",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "too many values to unpack (expected 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m epoch \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mplotters\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mplot_decoupling\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdevice\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrp\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mepoch\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Documents/Thesis/ICS_fork/ics-pa-sv/Kian_code/Plotting/plotters.py:134\u001b[0m, in \u001b[0;36mplot_decoupling\u001b[0;34m(model, device, rp, epoch)\u001b[0m\n\u001b[1;32m    131\u001b[0m q1_grid, q2_grid \u001b[38;5;241m=\u001b[39m plot_data()\n\u001b[1;32m    132\u001b[0m q_grid_flat \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mstack([q1_grid\u001b[38;5;241m.\u001b[39mflatten(), q2_grid\u001b[38;5;241m.\u001b[39mflatten()], dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m.\u001b[39mto(device)  \u001b[38;5;66;03m# Shape: (N, 2)\u001b[39;00m\n\u001b[0;32m--> 134\u001b[0m theta, J_h, q_hat, J_h_ana \u001b[38;5;241m=\u001b[39m model(q_grid_flat)\n\u001b[1;32m    136\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    137\u001b[0m \u001b[38;5;124;03mtry:\u001b[39;00m\n\u001b[1;32m    138\u001b[0m \u001b[38;5;124;03m    J_h_inv = torch.linalg.inv(J_h).to(device)\u001b[39;00m\n\u001b[1;32m    139\u001b[0m \u001b[38;5;124;03mexcept:\"\"\"\u001b[39;00m\n\u001b[1;32m    140\u001b[0m J_h_inv \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mlinalg\u001b[38;5;241m.\u001b[39mpinv(J_h)\u001b[38;5;241m.\u001b[39mto(device)\n",
-      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 4)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "epoch = 1\n",
-    "plotters.plot_decoupling(model, device, rp, epoch)"
    ]
   },
   {
