Define function to plot training loss

--- a/Kian_code/Learn Transform.ipynb
+++ b/Kian_code/Learn Transform.ipynb
@@ -373,6 +373,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def plot_loss(train_losses, val_losses, log = False):\n",
+    "\n",
+    "    \"\"\"\n",
+    "    Plots training and validation loss. \n",
+    "    ylim\" and \"yscale\" should be enabled depending on the loss function.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    plt.figure(figsize=(5, 3))\n",
+    "    plt.plot(train_losses, label=\"Training Loss\")\n",
+    "    plt.plot(val_losses, label=\"Validation Loss\")\n",
+    "    plt.xlabel(\"Epoch\")\n",
+    "    plt.ylabel(\"Loss\")\n",
+    "    #plt.ylim((-1, 40))\n",
+    "    plt.legend()\n",
+    "    plt.title(\"Training and Validation Loss over Epochs\")\n",
+    "    plt.grid(True)\n",
+    "    if log:\n",
+    "        plt.yscale(\"log\")\n",
+    "    plt.show()\n"
    ]
   },
   {
