Update PD gains

--- a/Kian_code/Controllers/PD.ipynb
+++ b/Kian_code/Controllers/PD.ipynb
@@ -65,25 +65,30 @@
    "outputs": [],
    "source": [
     "# When controlling on th_0\n",
-    "\"\"\"\n",
-    "Kp = torch.tensor([[100., 0.], [0., 0.]]).to(device)\n",
-    "Kd = torch.tensor([[40., 0.], [0., 0.]]).to(device)\n",
-    "\"\"\"\n",
+    "#\"\"\"\n",
+    "Kp = torch.tensor([[100., 0.], \n",
+    "                   [0., 0.]]).to(device)\n",
+    "Kd = torch.tensor([[40., 0.], \n",
+    "                   [0., 0.]]).to(device)\n",
+    "#\"\"\"\n",
     "\n",
     "# When controlling on th_1\n",
-    "#\"\"\"\n",
-    "Kp = torch.tensor([[0., 0.], [0., 100.]]).to(device)\n",
-    "Kd = torch.tensor([[0., 0.], [0., 40.]]).to(device)\n",
-    "#\"\"\"\n",
+    "\"\"\"\n",
+    "Kp = torch.tensor([[0., 0.], \n",
+    "                   [0., 100.]]).to(device)\n",
+    "Kd = torch.tensor([[0., 0.], \n",
+    "                   [0., 40.]]).to(device)\n",
+    "\"\"\"\n",
     "\n",
     "# When controlling on both th_0 and th_1\n",
-    "\"\"\"\n",
-    "Kp = torch.tensor([[100., 0.], [0., 100.]]).to(device)\n",
-    "Kd = torch.tensor([[40., 0.], [0., 40.]]).to(device)\n",
-    "\"\"\"\n",
+    "#\"\"\"\n",
+    "Kp = torch.tensor([[100., 0.], \n",
+    "                   [0., 10.]]).to(device)\n",
+    "Kd = torch.tensor([[40., 0.], \n",
+    "                   [0., 10.]]).to(device)\n",
+    "#\"\"\"\n",
     "\n",
-    "\n",
-    "C_damp = torch.tensor([[12., 0.], [0., 12.]]).to(device)"
+    "#C_damp = torch.tensor([[12., 0.], [0., 12.]]).to(device)"
    ]
   },
   {
