Add logging u and change time printing

--- a/Kian_code/Controllers/PD.ipynb
+++ b/Kian_code/Controllers/PD.ipynb
@@ -134,11 +134,12 @@
     "th_series, th_d_series, th_dd_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
     "q_est_series, q_d_est_series, q_dd_est_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
     "q_real_series, q_d_real_series, q_dd_real_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
+    "u_series = torch.empty((0,1)).to(device)\n",
     "\n",
     "\n",
     "dt = 0.01\n",
     "t_end = 15\n",
-    "t_series = torch.arange(0, 15, 0.01)\n",
+    "t_series = torch.arange(0, t_end, dt)\n",
     "\n",
     "th = th_start\n",
     "th_d = th_d_start\n",
@@ -162,7 +163,8 @@
     "\n",
     "\n",
     "for t in torch.arange(0, t_end, dt):\n",
-    "    print(\"Time:\", t.item().__round__(3))\n",
+    "    t_string = \"Time: [\" + str(t.item().__round__(3)) + \"/\" + str(t_end) + \".0]\"\n",
+    "    print(t_string)\n",
     "\n",
     "\n",
     "    is_clockwise = transforms.check_clockwise(q_real.squeeze(0))\n",
@@ -236,6 +238,8 @@
     "    q_est_series = torch.cat((q_est_series, q_est.detach()), dim=0)\n",
     "    q_d_est_series = torch.cat((q_d_est_series, q_d_est.detach()), dim=0)\n",
     "    q_dd_est_series = torch.cat((q_dd_est_series, q_dd_est.detach()), dim=0) \n",
+    "\n",
+    "    u_series = torch.cat((u_series, u.detach()), dim=0)\n",
     "\n",
     "    #print(is_clockwise)\n",
     "    print(\"\")\n",
@@ -417,7 +421,7 @@
     "name_q = \"q trajectory\"\n",
     "name_th = \"th trajectory\"\n",
     "name_xy = \"xy trajectory\"\n",
-    "t_series = torch.arange(0, 15, 0.01)\n",
+    "t_series = torch.arange(0, t_end, dt)\n",
     "# Ensure the results directory exists.\n",
     "result_path = \"./results\"\n",
     "os.makedirs(result_path, exist_ok=True)\n",
