Change name for video save

--- a/Kian_code/Controllers/PD.ipynb
+++ b/Kian_code/Controllers/PD.ipynb
@@ -344,7 +344,7 @@
     "    model_type = \"AL\"\n",
     "\n",
     "\n",
-    "file_name = \"damp\" + name_rp + name_ref + model_type\n",
+    "file_name = name_rp + name_ref + model_type\n",
     "file_name = file_name + \"_0.mp4\"\n",
     "file_counter = 0\n",
     "\n",
