Set global variable for training (c)cw (and remove old scrap)

--- a/Kian_code/Learn Transform.ipynb
+++ b/Kian_code/Learn Transform.ipynb
@@ -48,10 +48,7 @@
     "rp['m1'] = 0.0\n",
     "print(rp)\n",
     "\n",
-    "mapping_functions = (transforms.analytic_theta_1, transforms.analytic_theta_2)\n",
-    "th_plotter = theta_visualizer.theta_plotter(rp=rp, n_lines=50, mapping_functions=mapping_functions)\n",
-    "#th_plotter.make_figure(\"theta_subset_5_2_image.png\")\n",
-    "#th_plotter.make_animation(\"theta_subset_5_2.mp4\", duration = 4, fps = 20, stride = 1)"
+    "train_clockwise = False"
    ]
   },
   {
@@ -125,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "masked_points = mask_points((-torch.pi, torch.pi), clockwise = False)\n",
+    "masked_points = mask_points((-torch.pi, torch.pi), clockwise = train_clockwise)\n",
     "deshifted_points = transforms.wrap_to_pi(masked_points.clone())\n",
     "points_plotter(masked_points, extend=\"ccw\")\n",
     "points_plotter(deshifted_points, extend=\"ccw\")"
