[POOR PERFORMANCE] Edit loss function for constant mass matrix

--- a/Kian_code/Learn Transform.ipynb
+++ b/Kian_code/Learn Transform.ipynb
@@ -234,22 +234,31 @@
     "    l_diag = torch.mean((-1 + torch.exp(-(diag_values - 1))) * (diag_values < 1).float())  # Shape: (batch_size, 2)\n",
     "\n",
     "    ## input decoupling loss\n",
-    "    #l_input = torch.mean((A_th[:, 1]**2)) + torch.sum(((A_th[:, 0]-1)**2))\n",
+    "    #l_input = torch.mean((A_th[:, 1]**2)) + torch.mean(((A_th[:, 0]-1)**2))\n",
     "    l_input = torch.mean((A_th[:, 1]**2))\n",
+    "    \n",
+    "    #print(torch.eye(M_th.size(-1)))]).\n",
+    "    M_eye = torch.eye(M_th.size(-1), device=M_th.device, dtype=M_th.dtype).expand(M_th.size())\n",
+    "    l_inertia = F.mse_loss(M_th, M_eye, reduction=\"mean\")\n",
     "\n",
     "    f_recon        = 10.\n",
-    "    f_diag         = 1.\n",
-    "    f_off_diag     = 1.\n",
+    "    f_diag         = 0. #TODO: CHECK OUT THESE LOSS WEIGHTS\n",
+    "    f_off_diag     = 0. #TODO: CHECK OUT THESE LOSS WEIGHTS\n",
     "    f_input        = 1.\n",
-    "    f_input_jac    = 1.\n",
-    "    f_theta        = 1.\n",
-    "\n",
+    "    f_input_jac    = 0.\n",
+    "    f_theta        = 0.\n",
+    "    f_inertia      = 10.\n",
     "    \n",
-    "    loss_terms = torch.tensor([l_recon * f_recon, l_diag * f_diag, l_off_diag * f_off_diag, \n",
-    "                               l_input * f_input, l_input_jac * f_input_jac, l_theta * f_theta])\n",
-    "    loss_sum = l_recon * f_recon + l_diag * f_diag + l_off_diag * f_off_diag + l_input * f_input + l_input_jac * f_input_jac + l_theta * f_theta\n",
+    "    #loss_terms = torch.tensor([l_recon * f_recon, l_diag * f_diag, l_off_diag * f_off_diag, \n",
+    "    #                           l_input * f_input, l_input_jac * f_input_jac, l_theta * f_theta])\n",
+    "    #loss_sum = l_recon * f_recon + l_diag * f_diag + l_off_diag * f_off_diag + l_input * f_input + l_input_jac * f_input_jac + l_theta * f_theta\n",
     "\n",
-    "    lamda = 200\n",
+    "    loss_terms = torch.tensor([l_recon * f_recon, l_inertia * f_inertia, \n",
+    "                               l_input * f_input, l_input_jac * f_input_jac, l_theta * f_theta])\n",
+    "    loss_sum = l_recon * f_recon + l_inertia * f_inertia + l_input * f_input + l_input_jac * f_input_jac + l_theta * f_theta\n",
+    "\n",
+    "\n",
+    "    lamda = 100\n",
     "\n",
     "    return lamda * loss_sum, lamda * loss_terms"
    ]
@@ -295,7 +304,7 @@
     "        # Training phase\n",
     "        model.train()\n",
     "        train_loss = 0\n",
-    "        train_loss_terms = torch.zeros(6)\n",
+    "        train_loss_terms = torch.zeros(5)\n",
     "        for index, (q, M_q, A_q) in enumerate(train_dataloader):\n",
     "            q = q.to(device)\n",
     "\n",
@@ -320,7 +329,7 @@
     "        # Validation phase\n",
     "        model.eval()\n",
     "        val_loss = 0\n",
-    "        val_loss_terms = torch.zeros(6)\n",
+    "        val_loss_terms = torch.zeros(5)\n",
     "        with torch.no_grad():\n",
     "            for index, (q, M_q, A_q) in enumerate(val_dataloader):\n",
     "                q = q.to(device)\n",
@@ -346,10 +355,13 @@
     "        tlt = train_loss_terms\n",
     "        print(\n",
     "            f'Epoch [{epoch + 1}/{num_epochs}], Training Loss: {train_loss:.4f}, Validation Loss: {val_loss:.4f}, Duration: {epoch_duration:.2f} seconds')\n",
+    "        #print(\n",
+    "        #    f'l_recon: {tlt[0]:.4f}, l_diag: {tlt[1]:.4f}, l_off_diag: {tlt[2]:.4f}, l_input: {tlt[3]:.4f}, l_input_jac: {tlt[4]:.4f}, l_theta: {tlt[5]:.4f}'\n",
+    "        #)\n",
     "        print(\n",
-    "            f'l_recon: {tlt[0]:.4f}, l_diag: {tlt[1]:.4f}, l_off_diag: {tlt[2]:.4f}, l_input: {tlt[3]:.4f}, l_input_jac: {tlt[4]:.4f}, l_theta: {tlt[5]:.4f}'\n",
+    "            f'l_recon: {tlt[0]:.4f}, l_inertia: {tlt[1]:.4f}, l_input: {tlt[2]:.4f}, l_input_jac: {tlt[3]:.4f}, l_theta: {tlt[4]:.4f}'\n",
     "        )\n",
-    "            \n",
+    "        \n",
     "    return(model, train_losses, val_losses, file_path)\n"
    ]
   },
