--- a/Kian_code/Learn Transform.ipynb
+++ b/Kian_code/Learn Transform.ipynb
@@ -407,46 +407,94 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0fa8abe",
+   "id": "74d44a37",
    "metadata": {},
    "outputs": [],
    "source": [
-    "q_test = torch.tensor([[2, -0.]]).to(device)\n",
-    "theta, J_h, q_hat, J_h_ana = model(q_test)\n",
+    "import Plotting.plotters_simple as plotters_simple\n",
     "\n",
-    "J_h_inv = torch.linalg.pinv(J_h)\n",
-    "J_h_inv_trans = J_h_inv.transpose(1, 2)\n",
+    "def make_plot_dataloader(dataset):\n",
+    "\n",
+    "    \"\"\"\n",
+    "    Takes the training dataset and returns a dataloader of every 10th point\n",
+    "    to reduce visual clutter. \n",
+    "    \"\"\"\n",
+    "\n",
+    "    points_tensor, mass_matrices_tensor, input_matrices_tensor = dataset.tensors\n",
+    "    \n",
+    "    plot_sampled = points_tensor[::10]\n",
+    "    mass_sampled = mass_matrices_tensor[::10]\n",
+    "    input_sampled = input_matrices_tensor[::10]\n",
+    "\n",
+    "    plot_dataset = TensorDataset(plot_sampled, mass_sampled, input_sampled)\n",
+    "    plot_dataloader = DataLoader(plot_dataset, batch_size=len(plot_dataset), shuffle=False, num_workers=0)\n",
+    "\n",
+    "    return(plot_dataloader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c160a73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_model_performance(model, plot_dataloader):\n",
+    "\n",
+    "    model_ana = autoencoders.Analytic_transformer(rp)\n",
+    "\n",
+    "    model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        for (q, M_q, A_q) in plot_dataloader:\n",
+    "            q = q.to(device)\n",
+    "            M_q = M_q.to(device)\n",
+    "            A_q = A_q.to(device)\n",
+    "\n",
+    "            theta, J_h, q_hat, J_h_dec, J_h_ana = model(q)\n",
+    "            theta_ana = model.theta_ana(q)\n",
+    "            J_h_trans = torch.transpose(J_h, 1, 2)\n",
+    "            J_h_inv = J_h_dec\n",
+    "            J_h_inv_trans = torch.transpose(J_h_inv, 1, 2)\n",
+    "\n",
+    "            J_h_inv_ana = torch.linalg.inv(J_h_ana)\n",
+    "            J_h_inv_trans_ana = torch.transpose(J_h_inv_ana, 1, 2)\n",
+    "\n",
+    "            M_th = J_h_inv_trans @ M_q @ J_h_inv\n",
+    "            A_th = (J_h_inv_trans @ A_q).squeeze(-1)\n",
+    "\n",
+    "            M_th_ana = J_h_inv_trans_ana @ M_q @ J_h_inv_ana\n",
+    "            A_th_ana = (J_h_inv_trans_ana @ A_q).squeeze(-1)\n",
+    "\n",
+    "            \n",
+    "            plotters_simple.plot_3d_double(q, theta_ana[:, 0], theta[:, 0], \"th0\", \"analytical\", \"learned\", \"q_0\", \"q_1\", \"th0\", device)\n",
+    "            plotters_simple.plot_3d_double(q, theta_ana[:, 1], theta[:, 1], \"th1\", \"analytical\", \"learned\", \"q_0\", \"q_1\", \"th1\", device)\n",
     "\n",
     "\n",
+    "            plotters_simple.plot_3d_double(q, A_th[:, 0], A_th[:, 1], \"Input decoupling\", \"A0\", \"A1\", \"q_0\", \"q_1\", \"A\", device)\n",
+    "            plotters_simple.plot_3d_double(q, A_th_ana[:, 0], A_th_ana[:, 1], \"Input decoupling ana\", \"A0\", \"A1\", \"q_0\", \"q_1\", \"A\", device)\n",
+    "            A_th = A_th.cpu().detach().numpy()\n",
+    "            print(\"Percentage of abs(A_0) > 0.6:\", 100 * np.sum(np.abs(A_th[:, 0]) > 0.6)/A_th[:, 0].size, \"%\")\n",
+    "            print(\"Percentage of abs(A_1) < 0.3:\", 100 * np.sum(np.abs(A_th[:, 1]) < 0.3)/A_th[:, 1].size, \"%\")\n",
+    "            \n",
+    "            #plotters_simple.plot_3d_double(q, M_th[:, 0, 0], M_th[:, 0, 1], \"M_th\", \"00\", \"01\", \"q_0\", \"q_1\", \"M_th\", device)\n",
+    "            #plotters_simple.plot_3d_double(q, M_th[:, 1, 0], M_th[:, 1, 1], \"M_th\", \"10\", \"11\", \"q_0\", \"q_1\", \"M_th\", device)\n",
+    "            M_th_cpu = M_th.cpu().detach().numpy()\n",
+    "            #print(\"Percentage of abs(M_00) > 1.0:\", 100 * np.sum(np.abs(M_th_cpu[:, 0, 0]) > 1.0)/M_th_cpu[:, 0, 0].size, \"%\")\n",
+    "            #print(\"Percentage of abs(M_01) < 0.2:\", 100 * np.sum(np.abs(M_th_cpu[:, 0, 1]) < 0.2)/M_th_cpu[:, 0, 1].size, \"%\")\n",
+    "            #print(\"Percentage of abs(M_11) > 1.0:\", 100 * np.sum(np.abs(M_th_cpu[:, 1, 1]) > 1.0)/M_th_cpu[:, 1, 1].size, \"%\")\n",
     "\n",
+    "            #plotters_simple.plot_3d_double(theta, M_th[:, 0, 0], M_th[:, 0, 1], \"M_th vs. th\", \"00\", \"01\", \"th_0\", \"th_1\", \"M_th\", device)\n",
+    "            #plotters_simple.plot_3d_double(theta, M_th[:, 1, 0], M_th[:, 1, 1], \"M_th vs. th\", \"10\", \"11\", \"th_0\", \"th_1\", \"M_th\", device)\n",
+    "            \n",
+    "            plotters_simple.plot_3d_double(q, M_th_ana[:, 0, 0], M_th_ana[:, 0, 1], \"M_th_ana\", \"00\", \"01\", \"q_0\", \"q_1\", \"M_th\", device)\n",
+    "            plotters_simple.plot_3d_double(q, M_th_ana[:, 1, 0], M_th_ana[:, 1, 1], \"M_th_ana\", \"10\", \"11\", \"q_0\", \"q_1\", \"M_th\", device)\n",
     "\n",
-    "print(\"J_h:\\n\", J_h.detach().cpu().numpy()[0])\n",
-    "print(\"J_h_inv:\\n\", J_h_inv.detach().cpu().numpy()[0])\n",
+    "            plotters_simple.plot_3d_double(theta, M_th_ana[:, 0, 0], M_th_ana[:, 0, 1], \"M_th_ana vs. th\", \"00\", \"01\", \"th_0\", \"th_1\", \"M_th\", device)\n",
+    "            plotters_simple.plot_3d_double(theta, M_th_ana[:, 1, 0], M_th_ana[:, 1, 1], \"M_th_ana vs. th\", \"10\", \"11\", \"th_0\", \"th_1\", \"M_th\", device)\n",
     "\n",
-    "M_q, C_q, G_q = dynamics.dynamical_matrices(rp, q_test[0], q_test[0])\n",
-    "M_q = M_q.unsqueeze(0)\n",
-    "M_th, C_th, G_th = transforms.transform_dynamical_matrices(M_q, C_q, G_q, J_h, device)\n",
-    "print(\"M_q:\", M_q)\n",
-    "print(\"M_th:\\n\", M_th)\n",
-    "\n",
-    "\n",
-    "off_dia = M_th[:, 1,0]\n",
-    "diag_elements = M_th[:, [0, 1], [0, 1]]\n",
-    "diag_product = torch.sqrt(diag_elements[:, 0] * diag_elements[:, 1] + 1e-6)\n",
-    "M_th_ratio = off_dia/diag_product\n",
-    "print(\"M_th_ratio:\", M_th_ratio)\n",
-    "\n",
-    "print(\"M_q:\\n\", M_q)\n",
-    "\n",
-    "print(\"J_h_ana:\\n\", J_h_ana.detach().cpu().numpy()[0], \"\\n\")\n",
-    "J_h_ana_inv = torch.linalg.pinv(J_h_ana)\n",
-    "J_h_ana_inv_trans = J_h_ana_inv.transpose(1,2)\n",
-    "\n",
-    "print(\"J_h_ana_inv:\\n\", J_h_ana_inv.detach().cpu().numpy()[0], \"\\n\")\n",
-    "\n",
-    "\n",
-    "M_th_ana, C_th_ana, G_th_ana = dynamics.dynamical_matrices_th(rp, q_test[0], q_test[0]) \n",
-    "print(\"M_th_ana:\", M_th_ana.detach().cpu().numpy())"
+    "            #plotters_simple.plot_3d_double(q, J_h_ana[:, 0, 0], J_h[:, 0, 1], \"J_h\", \"00\", \"01\", \"q_0\", \"q_1\", \"J_h\", device)\n",
+    "            #plotters_simple.plot_3d_double(q, J_h_ana[:, 1, 0], J_h[:, 1, 1], \"J_h\", \"10\", \"11\", \"q_0\", \"q_1\", \"J_h\", device)\n",
+    "        "
    ]
   },
   {
