Remove plotter, calculate single theta and q_hat

--- a/Kian_code/Learn Transform.ipynb
+++ b/Kian_code/Learn Transform.ipynb
@@ -500,24 +500,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28bb2ae9",
+   "id": "c6e1aef2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Extract epochs and losses\n",
-    "epochs = [entry[0] for entry in outputs]\n",
-    "losses = [entry[1].item() for entry in outputs]\n",
-    "\n",
-    "# Plot loss as a function of epoch\n",
-    "plt.figure(figsize=(8, 6))\n",
-    "plt.plot(epochs, losses, marker='', label='Training Loss')\n",
-    "plt.title('Training Loss vs. Epoch')\n",
-    "plt.xlabel('Epoch')\n",
-    "plt.ylabel('Loss')\n",
-    "plt.yscale('log')\n",
-    "plt.grid(True)\n",
-    "plt.legend()\n",
-    "plt.show()"
+    "def theta_1_single(model, q):\n",
+    "    theta = model.encoder_nn(q)[0]\n",
+    "    return theta[:, 0].detach()\n",
+    "    \n",
+    "def theta_2_single(model, q):\n",
+    "    theta = model.encoder_nn(q)[0]\n",
+    "    return theta[:, 1].detach()\n",
+    "    \n",
+    "def q_hat_1_single(model, theta):\n",
+    "    q_hat = model.decoder_nn(theta)[0]\n",
+    "    return q_hat[:, 0].detach()\n",
+    "    \n",
+    "def q_hat_2_single(model, theta):\n",
+    "    q_hat = model.decoder_nn(theta)[0]\n",
+    "    return q_hat[:, 1].detach()"
    ]
   },
   {
